forth/test/fail/test_call_extra_dot_value.af
\ Must fail to compile.
123 let: TEST_VALUE
.TEST_VALUE
